[gd_scene load_steps=2 format=3 uid="uid://b60xax8j2rp1s"]

[ext_resource type="Script" uid="uid://bdt28e2x2c5dq" path="res://scenes/audio_options.gd" id="1_eaa3b"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_eaa3b")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.278431, 0.470588, 0.776471, 1)

[node name="Title" type="Label" parent="."]
offset_left = 511.0
offset_top = 248.0
offset_right = 641.0
offset_bottom = 271.0
text = "AUDIO SETTINGS"

[node name="MasterVolume" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -108.0
offset_right = -68.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="MasterVolume"]
layout_mode = 2
offset_left = 511.0
offset_top = 291.0
offset_right = 629.0
offset_bottom = 314.0
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="MasterVolume"]
layout_mode = 2
offset_left = 641.0
offset_top = 291.0
offset_right = 649.0
offset_bottom = 307.0
min_value = -1.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 400.0
offset_top = 334.0
offset_right = 400.0
offset_bottom = 357.0

[node name="Label" type="Label" parent="MusicVolume"]
offset_left = 4.0
offset_right = 113.0
offset_bottom = 23.0
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MusicVolume"]
offset_left = 125.0
offset_right = 133.0
offset_bottom = 16.0

[node name="SFXVolume" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 458.0
offset_top = 334.0
offset_right = 458.0
offset_bottom = 357.0

[node name="Label" type="Label" parent="SFXVolume"]
offset_left = -52.0
offset_top = 43.0
offset_right = 39.0
offset_bottom = 66.0
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="SFXVolume"]
offset_left = 68.0
offset_top = 43.0
offset_right = 76.0
offset_bottom = 59.0

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ApplyButton" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 550.0
offset_top = 425.0
offset_right = 602.0
offset_bottom = 456.0
text = "Apply"

[node name="BackButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
offset_left = 606.0
offset_top = 425.0
offset_right = 651.0
offset_bottom = 456.0
text = "Back"
